--- a/use.html
+++ b/use.html
@@ -84,6 +84,104 @@
             </a>
         </section>
     </div>
+    <!--Google Mail Tutorial-->
+    <div id="mail-tutorial">
+        apple
+    </div>
+
+    <!--Google Docs Tutorial-->
+    <div id="docs-tutorial">
+        <h3 class="tutorial-title">Opening Google Docs</h3>
+        <section class="tutorial-row">
+            <div class="img-caption">
+                <img src="assets/images/docs/step1.png">
+                <p>Once you have created your gmail account, click on the side icon as shown above and scroll down until you see the Google Docs logo.</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/docs/step2.jpg">
+                <p>After opening Google Docs, select "Blank" to open a new page.</p>
+            </div>
+        </section>
+        <h3 class="tutorial-title">How to modify the text you are using</h3>
+        <section class="tutorial-row">
+            <div class="img-caption">
+                <img src="assets/images/docs/step3.jpg">
+                <p> In order to make your text bold you would need to highlight your text by dragging your cursor across the words. Then, click on the 'B' icon to make your text bold. </p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/docs/step4.jpg">
+                <p>Similarly to bolding your text, highlight your text and click on the 'I' icon to italicize your text.</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/docs/step5.jpg">
+                <p>Click on the 'undo' button (found in the top left corner) as shown above to remove recent changes.</p>
+            </div>
+        </section>
+        <section class="tutorial-row">
+            <div class="img-caption">
+                <img src="assets/images/docs/step6.jpg">
+                <p>Click on the 'redo' button (found in the top left corner) as shown above to bring back your recent changes.</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/docs/step7.jpg">
+                <p>In order to change the font, click on the box as shown above and pick your preferred font. </p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/docs/step8.jpg">
+                <p>In order to change the size of your text/ font, highlight your text and click on the plus ('+') or minus ('-') button on either side of the box to change the size of your text.</p>
+            </div>
+        </section>
+        <section class="tutorial-row">
+            <div class="img-caption">
+                <img src="assets/images/docs/step9.jpg">
+                <p>Click on the 'Bulleted List' button (found on the right end of the tool bar) to create bullet points.</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/docs/step10.jpg">
+                <p>Click on the 'Numbered List' button (found on the right end of the tool bar) to create a list with numbers.</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/docs/step11.jpg">
+                <p>To insert an image: hover over the image tab as the arrow shows and then click on upload from the computer and choose an image that you would want to upload from your folders. <br> Note: You can minimise by clicking on the image and moving the corners. </p>
+            </div>
+        </section>
+        <h3 class="tutorial-title">How to share your document</h3>
+        <section class="tutorial-row">
+            <div class="img-caption">
+                <img src="assets/images/docs/step12.jpg">
+                <p>Click on the share button.</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/docs/step13.jpg">
+                <p>Once you click on restricted, you could change the general access to “anyone with the link”. </p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/docs/step14.jpg">
+                <p>You have the option to change the role as: 
+                    <ul>
+                        <li>Viewer(the person whom you shared your code with can view your document)</li>
+                        <li>Commenter (the person whom you shared your code with can comment on your document)</li>
+                        <li>Editor (the person whom you shared your code with can edit your document)</li>
+                    </ul>
+                Then go to the “Add people and groups” tab and write down their gmail addresses. If you need a refresher on how to create a gmail, go <a class="link" onclick="openMail()">here</a>.</p>
+            </div>
+        </section>
+    </div>
+
+    <!--Google Slides Tutorial-->
+    <div id="slides-tutorial">
+        crazy
+    </div>
+
+    <!--YT Tutorial-->
+    <div id="yt-tutorial">
+        dragon
+    </div>
+
+    <!--Google Cal Tutorial-->
+    <div id="cal-tutorial">
+        MSU
+    </div>
     <script src="assets/js/use_script.js"></script>
 </body>
 </html>
