--- a/use.html
+++ b/use.html
@@ -175,7 +175,59 @@
 
     <!--YT Tutorial-->
     <div id="yt-tutorial">
-        dragon
+        <h3 class="tutorial-title">Opening YouTube and Finding a video</h3>
+        <section class="tutorial-row">
+            <div class="img-caption">
+                <img src="assets/images/yt/step1.jpg">
+                <p>Once you are logged into your google account, click on the YouTube icon.</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/yt/step2.jpg">
+                <p>Once you have clicked on the YouTube icon, you can either scroll down to see what videos you would want to watch or click on the tab next to the magnifying glass and type in the name of the video that you would want to watch.</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/yt/step3.jpg">
+                <p>Once you have searched for the video that you want to watch, click on any video that you would want to watch.</p>
+            </div>
+        </section>
+        <h3 class="tutorial-title">YouTube Video Controls</h3>
+        <section class="tutorial-row-single">
+            <div class="image-caption">
+                <img src="assets/images/yt/step4.jpg">
+                <p>
+                    <ol>
+                        <li>The play button: Plays the video</li>
+                        <li>The skip button: skips to the next video.</li>
+                        <li>The volume button: changes the volume of the video.</li>
+                        <li>The cc button: Adds subtitles to the video.</li>
+                        <li>The settings button: Within settings you have two main functions:
+                            <ul>
+                                <li>The playback speed: You can change the speed (slow down or speed up) of the video.</li>
+                                <li>Captions: You can switch on the captions and change the language of the captions.</li>
+                            </ul>
+                        </li>
+                    </ol>
+                </p>
+            </div>
+        </section>
+        <section class="tutorial-row-single">
+            <div class="image-caption">
+                <img src="assets/images/yt/step5.jpg">
+                <p>
+                    <ol>
+                        <li>The subscribe icon: You can click on the subscribe button to get messages whenever that channel posts a new video.</li>
+                        <li>The Like icon: You can click to like the video.</li>
+                        <li>The Dislike icon: You can click the icon to dislike the video.</li>
+                        <li>The share icon: You can click the share icon to share the video with other people.</li>
+                        <li> The download icon: You can click the download icon to download the video.</li>
+                        <li>
+                            The Add comment line: You can start writing a comment about the video and reply to other people's comments.
+                        </li>
+                    </ol>
+                    Note: Please be aware of the online etiquette when 	commenting on other people's posts and writing your own comments.
+                </p>
+            </div>
+        </section>
     </div>
 
     <!--Google Cal Tutorial-->
