--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
         <div class="definition" id="access">
             <h3>Access</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                Access divide refers to the ability to access digital technologies and the internet, whether due to affordability, availability, or other factors. 
             </p>
             <a class="button-link" href="access.html">Learn More</a>
         </div>
         <div class="definition" id="use">
             <h3>Use</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Use divide refers to the lack of digital skills when using digital technologies and the internet. People experiencing the use divide have access to the internet but do not have the proper skills to utilize that access yet.
             </p>
             <a class="button-link" href="use.html">Start Lessons</a>
         </div>
         <div class="definition" id="quality">
             <h3>Quality</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Quality of Use gap occurs when a user has the skills to utilize their access to the internet, but lacks the knowledge about how to make good use of it. This can refer to the quality of information they can use as well as getting the most use out of their internet access. This gap, combined with the use divide, makes up the digital literacy divide.
             </p>
             <a class="button-link" href="quality.html">Start Lessons</a>
         </div>
