--- a/use.html
+++ b/use.html
@@ -86,7 +86,108 @@
     </div>
     <!--Google Mail Tutorial-->
     <div id="mail-tutorial">
-        apple
+        <h3 class="tutorial-title">Creating a Google Account</h3>
+        <section class="tutorial-row">
+            <div class="img-caption">
+                <img src="assets/images/gmail/step1.png">
+                <p>In Google Chrome type in “Google Sign Up” there should be a link that says “Create a Gmail Account”. By clicking on this link and pressing the button “Create Account”, you should see the following information above.</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/gmail/step2.png">
+                <p>Type in the information that they wish to know. When creating your email Google will ask that it is unique, so you may have to try a few times to find an email which isn't already taken. <br>
+                If you have a hard time creating an email yourself, google will try to offer suggestions based on what you wrote in order to give you a unique name. This is indicated above with the blue words after “available”. <br>
+                Lastly, create your password. In order to do so follow the rules that Google provides. Please make sure it is easy for you to remember, but isn't something that others could guess. Once you have chosen your password hit next.  <br>
+                They will ask for you to verify you're phone number with a text that they sent you &mdash; Take the #'s after the G and type them into the respective space give and hit the verification button.
+                </p>
+            </div>
+        </section>
+        <section class="tutorial-row">
+            <div class="img-caption">
+                <img src="assets/images/gmail/step3.png">
+                <p>This screen should pop up once you have successfully verified your phone number. Now you may add an already existing email to help with password recovery (discussed in later lectures). Other than that please fill out your respective information.</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/gmail/step4.png">
+                <p>This notification may display on your screen. By saying yes you will have access to the features listed above, but if this holds no purpose for you please hit skip.</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/gmail/step5.png">
+                <p>Finally, there will be a “document” that lays out the Policy and Terms, which is the rules and regulations of Google's services. Hit I agree once you have looked over them.</p>
+            </div>
+        </section>
+        <h3 class="tutorial-title">Adding a Profile Picture</h3>
+        <section class="tutorial-row">
+            <div class="img-caption">
+                <img src="assets/images/gmail/step6.png">
+                <p>To add a profile pic please click the icon that has the first letter of your name, followed by “Manage Google Account”</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/gmail/step7.png">
+                <p>Select the circular logo in the top center of the page.</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/gmail/step8.png">
+                <p>From there you should be able to click on “Add a profile picture”. After hitting this, there should be a vast collection of photos you can choose from.</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/gmail/step9.png">
+                <p>Once you have chosen the picture best suited to your liking, pick any color scheme that you may like followed by “Save a profile picture”. From there you should be able to see your new profile picture hass been added to your account.</p>
+            </div>
+        </section>
+        <h3 class="tutorial-title">Writing an Email</h3>
+        <section class="tutorial-row">
+            <div class="img-caption">
+                <img src="assets/images/gmail/step10.png">
+                <p>From that same page, select the square that consists of 9 dots. From there, hit the “Gmail” logo. After this, you should see the second picture shown above.</p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/gmail/step11.png">
+                <p>Take a look at the box menu to the left of your screen. This is where most of your Gmail functionality resides.
+                    Inbox: this is the “box” where any and all emails sent to you will come in. You can click on any email that resides in this box and read it's contents.
+                    <ul>
+                        <li>Starred: a special “box” where any messages you mark as important will reside.</li>
+                        <li>Snoozed: this box will hold any messages that you decide to snooze. By snoozing a message gmail will resend you an email at a later date/time that in convenient for you.</li>
+                        <li>Sent: Any emails that you send will be saved here.</li>
+                        <li>Drafts: Any messages that you have written up but haven't sent quite yet will be here.</li>
+                    </ul>
+                </p>
+            </div>
+        </section>
+        <section class="tutorial-row">
+            <div class="img-caption">
+                <img src="assets/images/gmail/step12.png">
+                <p>If you hit “Compose” you should see this box pop up in the bottom right-hand corner. This is the box you will write all of your messages in. 
+                    <ul>
+                        <li>To: This is where you will enter all the email of the person you wish to send an email to. Note that you can list multiple emails here in order to send it to 2 or more people.</li>
+                        <li>Subject: Think of this as the title of an essay. This is the first thing the reader of the email sees. The subject should match the contents of the email.</li>
+                        <li>Cc: allows you to add in someone to an email to read the email, but the message is not intended for them specifically.</li>
+                        <li>Bcc: This allows you to send emails to multiple people but does not let the receivers see each others email addresses.</li>
+                    </ul>
+                Now take a look an the bottom of this same box, you should see an array of icons. The first and most important, the send button. If you click the down arrow you'll see the option schedule send. <br>
+                This schedule send option lets you send a message at a specific time in the future. If you simply click send it will send the message immediately. <br>
+                The next most important icon is that of a paper-clip. This allows you to attach files from your computer into your messages. File types you can add PDFs, photos,videos, and word documents. <br>
+                </p>
+            </div>
+        </section>
+        <h3 class="tutorial-title">Answering Emails</h3>
+        <section class="tutorial-row">
+            <div class="img-caption">
+                <img src="assets/images/gmail/step13.png">
+                <p>You will also need to respond to your emails. Once you click on the email you'd like to open, you will see a page similar to this one. In order to respond to the person who sent the email use “Reply”. <br>
+                To send the email to someone else, use “Forward”.</p>
+            </div>
+        </section>
+        <h3 class="tutorial-title">Logging Out of Your Account</h3>
+        <section class="tutorial-row">
+            <div class="img-caption">
+                <img src="assets/images/gmail/step14.png">
+                <p>If you are not using your Gmail on a personal computer you should <b>always log off</b>. To do so, click your icon at the top right and hit sign out. </p>
+            </div>
+            <div class="img-caption">
+                <img src="assets/images/gmail/step15.png">
+                <p>After that, you will see a page like the picture above. To continue with the course click on your name again, and type in your password.</p>
+            </div>
+        </section>
     </div>
 
     <!--Google Docs Tutorial-->
@@ -106,11 +207,11 @@
         <section class="tutorial-row">
             <div class="img-caption">
                 <img src="assets/images/docs/step3.jpg">
-                <p> In order to make your text bold you would need to highlight your text by dragging your cursor across the words. Then, click on the 'B' icon to make your text bold. </p>
+                <p> In order to make your text <b>bold</b> you would need to highlight your text by dragging your cursor across the words. Then, click on the 'B' icon to make your text bold. </p>
             </div>
             <div class="img-caption">
                 <img src="assets/images/docs/step4.jpg">
-                <p>Similarly to bolding your text, highlight your text and click on the 'I' icon to italicize your text.</p>
+                <p>Similarly to bolding your text, highlight your text and click on the 'I' icon to <i>italicize</i> your text.</p>
             </div>
             <div class="img-caption">
                 <img src="assets/images/docs/step5.jpg">
@@ -159,7 +260,7 @@
                 <img src="assets/images/docs/step14.jpg">
                 <p>You have the option to change the role as: 
                     <ul>
-                        <li>Viewer(the person whom you shared your code with can view your document)</li>
+                        <li>Viewer (the person whom you shared your code with can view your document)</li>
                         <li>Commenter (the person whom you shared your code with can comment on your document)</li>
                         <li>Editor (the person whom you shared your code with can edit your document)</li>
                     </ul>
