--- a/use.html
+++ b/use.html
@@ -38,9 +38,11 @@
             <a class="lesson" id="docs" onclick="openDocs()">
                 <h4>Google Docs</h4>
             </a>
+            <!--
             <a class="lesson" id="slides" onclick="openSlides()">
                 <h4>Google Slides</h4>
             </a>
+            -->
             <a class="lesson" id="back-top" onclick="resetGoogle()">
                 <h4>Back</h4>
             </a>
@@ -269,11 +271,6 @@
         </section>
     </div>
 
-    <!--Google Slides Tutorial-->
-    <div id="slides-tutorial">
-        crazy
-    </div>
-
     <!--YT Tutorial-->
     <div id="yt-tutorial">
         <h3 class="tutorial-title">Opening YouTube and Finding a video</h3>
@@ -334,6 +331,19 @@
     <!--Google Cal Tutorial-->
     <div id="cal-tutorial">
         MSU
+    </div>
+
+    <!--Security Section-->
+    <div id="pi-tutorial">
+        hello
+    </div>
+
+    <div id="virus-tutorial">
+        world
+    </div>
+
+    <div id="pw-tutorial">
+        this
     </div>
     <script src="assets/js/use_script.js"></script>
 </body>
