Access divide page

--- a/access.html
+++ b/access.html
@@ -18,6 +18,11 @@
         </nav>
     </header>
     <h2>ACCESS DIVIDE</h2>
+    <p class="access-divide">Access divide refers to the ability to access digital technologies and the internet, whether due to affordability, availability, or other factors.</p>
+    <p class="access-divide">In order to combat access divide, it is necessary to evaluate each of the areas that affect this divide separately:</p>
+    <h4 class="access">Accessibility</h4>
+    <h4 class="access">Availability</h4>
+    <h4 class="access">Interest</h4>
     
 </body>
 </html>
