--- a/use.html
+++ b/use.html
@@ -22,9 +22,11 @@
         <a class="lesson" onclick="openGoogleSuite()">
             <h3>Google Suite</h3>
         </a>
+        <!--
         <a class="lesson" onclick="openZoom()">
             <h3>Zoom</h3>
         </a>
+        -->
         <a class="lesson" onclick="openSecurity()">
             <h3>Security</h3>
         </a>
@@ -55,21 +57,24 @@
             <a class="lesson" id="sheets" onclick="openSheets()">
                 <h4>Google Sheets</h4>
             </a>
-            -->
+            
             <a class="lesson" id="cal" onclick="openCal()">
                 <h4>Google Calendar</h4>
             </a>
+            -->
             <a class="lesson" id="back-bottom" onclick="resetGoogle()">
                 <h4>Back</h4>
             </a>
         </section>
     </div>
+    <!--
     <div id="zoom">
         <h4>Zoom Tutorial</h4>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
     </div>
+    -->
     <div id="security">
         <section class="lessons">
             <a class="lesson" id="pi" onclick="openPI()">
@@ -79,7 +84,7 @@
                 <h4>Viruses</h4>
             </a>
             <a class="lesson" id="pw" onclick="openPW()">
-                <h4>Passwords</h4>
+                <h4>Phishing</h4>
             </a>
             <a class="lesson" id="back" onclick="resetSecurity()">
                 <h4>Back</h4>
@@ -328,22 +333,60 @@
         </section>
     </div>
 
-    <!--Google Cal Tutorial-->
-    <div id="cal-tutorial">
-        MSU
-    </div>
-
     <!--Security Section-->
     <div id="pi-tutorial">
-        hello
+        <ul>
+            <li>Do not share location unless needed to.</li>
+            <li>Do not share your address online.</li>
+            <li>Do not share your phone number </li>
+            <li>Do not share your birthday</li>
+            <li>Do not share your full name or your family's names.</li>
+            <li>Do not share your credit/debit card number or PIN online. </li>
+            <li>Do not share your passport information. </li>
+        </ul>
     </div>
 
     <div id="virus-tutorial">
-        world
+        <h4>Definition</h4>
+        <p>Viruses are a type of harmful software that would end up spreading to other computers. The virus could cause a number of issues such as: slow down the performance of the computer, corrupt the files on your computer, and cause applications on your computer to fail.</p> 
+        <h4>Common ways to get them: </h4>
+        <p>
+            <ul>
+                <li>Downloading movies/music from an unsecure website.</li>
+                <li>Clicking the links or downloading attachments from a phishing email.</li>
+                <li>Clicking on pop-up advertisements that are online. </li>
+            </ul>
+        </p>
+        <h4>Read More</h4>
+        <p>To read more about computer viruses, click <a href="https://www.avast.com/c-computer-virus">here</a> </p>
+
     </div>
 
     <div id="pw-tutorial">
-        this
+        <h4>Definition</h3>
+        <p>Phishing is a type of fraud email or message that would be sent to users posing as a trustworthy company asking for your personal information. </p>
+        <h4>How to spot phishing:</h3>
+        <p>Here are some of the ways to spot phishing: 
+            <ol>
+                <li>Poor grammar and spelling.</li>
+                <li>Asks for login email or password, credit/debit card number, address or any other personal information.</li>
+                <li>The name of the person sending the email as well as their email address would look fake.</li>
+                <li>The email would start with a non-personal greeting.</li>
+                <li>The attachment in the email would look suspicious.</li>
+                <li>The tone of the phishing emails would be urgent and would provide you with a 
+                    link.</li>
+            </ol>
+        </p>
+        <h4>How to protect yourself from phishing emails:</h4>
+        <p>Here are some tips to protect you from phishing emails:
+            <ul>
+                <li>Do not share your personal information.</li>
+                <li>Do not click on the attachment in the email.</li>
+                <li>Do not click the link given.</li>
+                <li>Do not reply back to the email.</li>
+                <li>Delete the email or report the email.</li>
+            </l>
+        </p>
     </div>
     <script src="assets/js/use_script.js"></script>
 </body>
