Updated Quality of Use

--- a/quality.html
+++ b/quality.html
@@ -30,13 +30,107 @@
     <div id="sources">
         <h4>Credible Sources</h4>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <b>Credible Sources:</b> A credible source is a website or 
+            source that is written by an author who is trustworthy. The 
+            internet is full of different resources. It is important for 
+            you to know which resources to trust and which resources to 
+            be careful of. 
+        </p>
+        <p>
+            <h4>How to spot a credible source:</h4>
+            <ul>
+                <li>
+                    Make sure to read the website link. Google would point 
+                    out if the website is secure or not through an icon that 
+                    looks like a closed lock on the left of the URL.
+                </li>
+
+                <li>
+                    Read who the author of the website is and make sure that 
+                    they are a well-known person. 
+                </li>
+
+                <li>
+                    Once you read through the website, make sure that the 
+                    information on the website is not biased. 
+                </li>
+
+                <li>
+                    Once you read through the website, make sure that the 
+                    information on the website is not biased. 
+                </li>
+
+                <li>
+                    Check the date of the website and ensure that it has 
+                    up-to-date information. 
+                </li>
+
+            </ul>
+        </p>
+        <p>
+            <h4>Reliable sources:</h4>
+
+            Here are some reliable sources that you could use: 
+
+            <ul>
+                <li>
+                    <a href="">https://scholar.google.com/</a>
+                </li>
+
+                <li>
+                    <a href="">https://www.nytimes.com/</a>
+                </li>
+
+                <li>
+                    <a href="">https://www.washingtonpost.com/</a>
+                </li>
+            </ul>
+        </p>
+        <p>
+            <h4>Read More:</h4>
+
+            If you would like to know more about how to spot a credible source, click on this link: 
+            <ul>
+                <li>
+                    <a href="https://www.stevenson.edu/online/about-us/news/how-to-identify-reliable-information/">https://www.stevenson.edu/online/about-us/news/how-to-identify-reliable-information/</a>
+                </li>
+            </ul>
         </p>
     </div>
     <div id="ettiquette">
         <h4>Online Ettiquette</h4>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Online Etiquette: 
+
+            <ul>
+                <li>
+                    Nothing is private online: The things that you do online will remain online forever.
+                </li>
+
+                <li>
+                    Be careful with how your tone is online: Do not write posts or comments online in 
+                    all-caps lock. This is because the tone of the post would be read as yelling. 
+                </li>
+
+                <li>
+                    Be Accurate with your information: Do not spread misinformation. Make sure you 
+                    use credible sources to get accurate information.
+                </li>
+
+                <li>
+                    Be courteous online: Make sure when you post or comment online, you are respectful 
+                    of other people online. Do not use inappropriate Language. Remember that what you 
+                    post or comment online will remain online.
+
+                </li>
+
+                <li>
+                    Respect other user's privacy: Do not share passwords or ask for passwords. Do not 
+                    share other user's personal information. 
+
+                </li>
+            </ul>
+
         </p>
     </div>
     <script src="assets/js/quality_script.js"></script>
