--- a/quality.html
+++ b/quality.html
@@ -74,33 +74,27 @@
 
             <ul>
                 <li>
-                    <a href="">https://scholar.google.com/</a>
+                    <a href="https://scholar.google.com/">Google Scholar</a>
                 </li>
 
                 <li>
-                    <a href="">https://www.nytimes.com/</a>
+                    <a href="https://www.nytimes.com/">New York Times</a>
                 </li>
 
                 <li>
-                    <a href="">https://www.washingtonpost.com/</a>
+                    <a href="https://www.washingtonpost.com/">Washington Post</a>
                 </li>
             </ul>
         </p>
         <p>
             <h4>Read More:</h4>
 
-            If you would like to know more about how to spot a credible source, click on this link: 
-            <ul>
-                <li>
-                    <a href="https://www.stevenson.edu/online/about-us/news/how-to-identify-reliable-information/">https://www.stevenson.edu/online/about-us/news/how-to-identify-reliable-information/</a>
-                </li>
-            </ul>
+            If you would like to know more about how to spot a credible source, click <a href="https://www.stevenson.edu/online/about-us/news/how-to-identify-reliable-information/">here</a>.
         </p>
     </div>
     <div id="ettiquette">
         <h4>Online Ettiquette</h4>
         <p>
-            Online Etiquette: 
 
             <ul>
                 <li>
