--- a/use.html
+++ b/use.html
@@ -358,7 +358,7 @@
             </ul>
         </p>
         <h4>Read More</h4>
-        <p>To read more about computer viruses, click <a href="https://www.avast.com/c-computer-virus">here</a> </p>
+        <p>To read more about computer viruses, click <a href="https://www.avast.com/c-computer-virus">here</a>. </p>
 
     </div>
 
