final changes/additions

--- a/access.html
+++ b/access.html
@@ -20,9 +20,13 @@
     <h2>ACCESS DIVIDE</h2>
     <p class="access-divide">Access divide refers to the ability to access digital technologies and the internet, whether due to affordability, availability, or other factors.</p>
     <p class="access-divide">In order to combat access divide, it is necessary to evaluate each of the areas that affect this divide separately:</p>
-    <h4 class="access">Accessibility</h4>
+    <h4 class="access">Affordability</h4>
+    <p class="access-divide">Because getting access to digital technologies is very expensive, it is difficult to afford for many people.</p>
     <h4 class="access">Availability</h4>
+    <p class="access-divide">Many times, communities do not have the necessary resources available to connect to the internet. For example, without the proper infrastructure, even people who own laptops will not be able to access the internet.</p>
     <h4 class="access">Interest</h4>
+    <p class="access-divide">Many communities do not have an interest in accessing the internet due to a lack of resources and understanding of this technology.</p>
+    <p class="access-divide"><br>For additional information about the access divide, refer to the sources on the <a href="about.html">About Page</a>.</p>
     
 </body>
 </html>
